--- a/HeHaven/style.css
+++ b/HeHaven/style.css
@@ -161,7 +161,7 @@ h6 {
   transition: all 0.5s;
   z-index: 997;
   padding: 15px 0;
-  top: 40px;
+  top: 1rem;
   box-shadow: 0px 2px 15px rgba(25, 119, 204, 0.1);
 }
 
@@ -190,7 +190,7 @@ h6 {
 .appointment {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(rgba(55, 142, 181, 0.5), rgba(55, 142, 181, 0.1)), url("assets/bg3.jpg") top center;
+  background: linear-gradient(rgba(55, 142, 181, 0.5), rgba(55, 142, 181, 0.1)), url("assets/bg5.jpg") top center;
   background-size: cover;
   background-attachment: fixed;
   position: relative;
@@ -452,7 +452,7 @@ h6 {
 #hero {
   width: 100%;
   height: 150vh;
-  background: url("assets/bg3.jpg") top center;
+  background: url("assets/bg5.jpg") top center;
   background-size: cover;
   margin-bottom: -350px;
 }
